--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <textarea name="msg" id="msg" placeholder="Digite sua mensagem:"></textarea>
           </div>
           <input type="submit" class="btn" value="Quero uma consulta" />
+          <input type="hidden" name="_next" value="https://fabricioguglielmi.vercel.app">
         </form>
       </div>
     </header>
