--- a/index.html
+++ b/index.html
@@ -99,29 +99,45 @@
       <div id="address">
         <i class="fa-light fa-scale-balanced"></i>
         <div id="address-details">
-          <p>Rua do escritório, 1333</p>
-          <p>Bairro XYZ</p>
-          <p>Horário: Das 08 ás 18h</p>
+          <p>"Mas a retórica é útil, porque</p>
+          <p>a verdade e a justiça são por natureza</p>
+          <p>mais fortes que os seus contrários"</p>
+          <p> -Aristóteles </p>
         </div>
       </div>
       <div id="about-location">
-        <h3>Nosso escritório</h3>
+        <h3>Advocacia Especializada</h3>
         <p>
-          Estamos localizados no coração da cidade, local de fácil acesso, estacionamento e segurança privada para sua comodidade, faça-nos uma visita.
+          Trabalhamos com parcerias especializadas nas mais diversas áreas do Direito, sempre buscando um atendimento humanizado, personalizado, com respeito e ética.
         </p>
       </div>
     </section>
     <section id="details">
       <div class="detail" id="detail-1">
-        <img src="img/tj-2.webp" alt="" />
+        <img src="img/tribunal.jpg" alt="" />
         <div class="detail-description">
           <h3>Conheça um pouco do nosso trabalho</h3>
         </div>
       </div>
       <div class="detail" id="detail-2">
         <div class="detail-description">
-          <h3>Loren ipsum</h3>
+          <h3>Direito Penal</h3>
           <ul>
+            <li>Acompanhamento de prisão</li>
+            <li>Loren ipsum</li>
+            <li>Loren ipsum</li>
+            <li>Loren ipsum</li>
+            <li>Loren ipsum</li>
+          </ul>
+        </div>
+        <img src="img/penal3.webp" alt="" />
+      </div>
+      <div class="detail" id="detail-3">
+        <img src="img/civil.jpg" alt="" />
+        <div class="detail-description">
+          <h3>Direito Civíl</h3>
+          <ul>
+            <li>Loren ipsum</li>
             <li>Loren ipsum</li>
             <li>Loren ipsum</li>
             <li>Loren ipsum</li>
@@ -129,12 +145,24 @@
             <li>Loren ipsum</li>
           </ul>
         </div>
-        <img src="img/dppa-gravatai.jpg" alt="" />
       </div>
-      <div class="detail" id="detail-3">
-        <img src="img/acordo.jpeg" alt="" />
+      <div class="detail" id="detail-4">
         <div class="detail-description">
-          <h3>Loren ipsum</h3>
+          <h3>Direito do Consumidor</h3>
+          <ul>
+            <li>loren ipsum</li>
+            <li>Loren ipsum</li>
+            <li>Loren ipsum</li>
+            <li>Loren ipsum</li>
+            <li>Loren ipsum</li>
+          </ul>
+        </div>
+        <img src="img/consumidor2.jpg" alt="" />
+      </div>
+      <div class="detail" id="detail-5">
+        <img src="img/familia2.jpg" alt="" />
+        <div class="detail-description">
+          <h3>Direito de Família</h3>
           <ul>
             <li>Loren ipsum</li>
             <li>Loren ipsum</li>
@@ -153,13 +181,16 @@
     </section>
     <footer id="footer">
       <h3>Dr. Fabrício Guglielmi Advocacia</h3>
-      <p>Gravataí RS</p>
+      <h4>OAB/RS: 123.726</h4>
+      <p>Gravataí RS</p><br/>
       <p><span>Entre em contato:</span> advfabricioguglielmi@hotmail.com</p>
       <p><span>Ou pelo telefone:</span> (51) 98218-2199</p><br/>
-      <h2>Conecte-se conosco:</h2>
-      <a href="https://instagram.com/advfabricioguglielmi" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/fabr%C3%ADcioguglielmiadvogado/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-      <a href="https://api.whatsapp.com/send?1=pt_BR&phone=5551982182199" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+      <div class="icons">
+        <h2>Conecte-se conosco:</h2>
+        <a href="https://instagram.com/advfabricioguglielmi" target="_blank"><img src="img/instagram-brands.svg" width="35px" height="35px" alt=""></a>
+        <a href="https://www.linkedin.com/in/fabr%C3%ADcioguglielmiadvogado/" target="_blank"><img src="img/linkedin-brands.svg" width="35px" height="35px" alt=""></a>
+        <a href="https://api.whatsapp.com/send?1=pt_BR&phone=5551982182199" target="_blank"><img class="icons2" src="img/whatsapp-square-brands.svg" width="35px" height="35px" alt=""></i></a>
+      </div>
     </footer>
     <footer2>
       <p>&copy; 2022 - Dr.Fabrício Guglielmi Advocacia | Desenvolvido por: <a href="https://fabiosouttodev.vercel.app" target="_blank">Fabio Soutto Dev</a></p>
