--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
         <form action="https://formsubmit.co/advfabricioguglielmi@hotmail.com" method="POST">
           <div class="form-group">
             <label for="name">Nome</label>
-            <input type="text" placeholder="Digite seu nome" />
+            <input type="text" placeholder="Digite seu nome" required />
           </div>
           <div class="form-group">
             <label for="email">E-mail</label>
-            <input type="email" placeholder="Digite seu melhor e-mail" />
+            <input type="email" placeholder="Digite seu melhor e-mail" required />
           </div>
           <div class="form-group">
             <label for="phone">Telefone</label>
-            <input type="text" placeholder="Número de Whatsapp" />
+            <input type="text" placeholder="Número de Whatsapp" required />
           </div>
           <div class="form-group">
             <label for="interest">Principal interesse</label>
-            <select name="interest">
+            <select name="interest" required>
               <option value="" disabled selected>Selecione</option>
               <option value="apartment">Direito Civil</option>
               <option value="house">Direito Penal</option>
@@ -59,7 +59,7 @@
               <option value="garden">Direito de Família</option>
               <option value="other">Outros assuntos</option>
             </select>
-            <textarea name="msg" id="msg" placeholder="Digite sua mensagem:"></textarea>
+            <textarea name="msg" id="msg" placeholder="Digite sua mensagem:" required></textarea>
           </div>
           <input type="submit" class="btn" value="Quero uma consulta" />
           <input type="hidden" name="_next" value="https://fabricioguglielmi.vercel.app">
