--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="benefit">
           <div id="benefit-2" class="benefit-img"></div>
           <p>
-            Assessoria Jurídica na área de Direito Civíl.
+            Assessoria Jurídica na área de Direito Civil.
           </p>
         </div>
         <div class="benefit">
@@ -135,7 +135,7 @@
       <div class="detail" id="detail-3">
         <img src="img/civil.jpg" alt="" />
         <div class="detail-description">
-          <h3>Direito Civíl</h3>
+          <h3>Direito Civil</h3>
           <ul>
             <li>Loren ipsum</li>
             <li>Loren ipsum</li>
