--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
               Advogado registrado na OAB/RS 123.726 - Subseção Gravataí.<br/>
               Pós-graduado em Direito Público pela LEGALE - 2021.<br/>
               Pós-graduando em Direito Civil e Processo Civil pela LEGALE com previsão de conclusão no final de 2022.<br/>
-              Membro da Comissão de Criminalistas da OAB/RS Subseção Gravataí/RS.<br/>
+              Membro da Comissão de Criminalistas da OAB/RS Subseção Gravataí.<br/>
             </p>
           </div><!--texto-perfil-->
         </div><!--perfil-wraper2-->
