--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
             <h2>OAB/RS 123.726</h2>
             <p>
               Bacharel em Direito pela Ulbra Gravataí RS - 2019.<br/>
-              Advogado registrado na OAB/RS 123.726 - Subseção Gravataí.<br/>
+              Advogado registrado na OAB/RS 123.726 - subseção Gravataí.<br/>
               Pós-graduado em Direito Público pela LEGALE - 2021.<br/>
               Pós-graduando em Direito Civil e Processo Civil pela LEGALE com previsão de conclusão no final de 2022.<br/>
-              Membro da Comissão de Criminalistas da OAB/RS Subseção Gravataí.<br/>
+              Membro da Comissão de Criminalistas da subseção Gravataí - OAB/RS.<br/>
             </p>
           </div><!--texto-perfil-->
         </div><!--perfil-wraper2-->
