--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       </div>
     </footer>
     <footer2>
-      <p>&copy; 2022 - Dr.Fabrício Guglielmi Advocacia | Desenvolvido por: <a href="https://fabiosouttodev.vercel.app" target="_blank">Fabio Soutto Dev</a></p>
+      <p>&copy; 2022 - Fabrício Guglielmi Advocacia | Desenvolvido por: <a href="https://fabiosouttodev.vercel.app" target="_blank">Fabio Soutto Dev</a></p>
     </footer2>
     <script src="https://kit.fontawesome.com/3ed642bbbb.js" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
