--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@
       <h3>Fabrício Guglielmi Advocacia</h3>
       <h4>OAB/RS: 123.726</h4>
       <p>Gravataí RS</p><br/>
-      <p><span>Entre em contato:</span> advfabricioguglielmi@hotmail.com</p>
-      <p><span>Ou pelo telefone:</span> (51) 98218-2199</p><br/>
+      <p>Entre em contato: <span>advfabricioguglielmi@hotmail.com</span></p>
+      <p>Ou pelo telefone: <span>(51) 98218-2199</span></p><br/>
       <div class="icons">
         <h2>Conecte-se conosco:</h2>
-        <a href="https://instagram.com/advfabricioguglielmi" target="_blank"><img src="img/instagram-brands.svg" width="35px" height="35px" alt=""></a>
-        <a href="https://www.linkedin.com/in/fabr%C3%ADcioguglielmiadvogado/" target="_blank"><img src="img/linkedin-brands.svg" width="35px" height="35px" alt=""></a>
+        <a href="https://instagram.com/advfabricioguglielmi" target="_blank"><i class="fa fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/fabr%C3%ADcioguglielmiadvogado/" target="_blank"><i class="fa fa-linkedin"></i></a>
       </div>
     </footer>
     <footer2>
